k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sk055-ingress-test
  namespace: skala-practice
spec:
  selector:
    app: sk055-ingress-test
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
